# nesc

./: .gitignore  README.md  requirements.txt
.github/workflows/: github-cd.yml  github-ci-cd.yml
config/: settings.py
nesc/: README.rst  __init__.py  pyproject.toml  rebuild.sh  reupload.sh  setup.cfg  setup.py
nesc/core/: __init__.py  apps.py  nesc.py
nesc/nesc/: __init__.py  service.py
test/api/: fk.py  m2m.py  o2o.py
test/migrations/: 0001_initial.py  0002_alter_article_publications.py  0003_reporter_news.py  0004_place_restaurant.py  0004_restaurant_restaurantdirector.py
test/models/: __init__.py  fk.py  m2m.py  o2o.py
test/serialziers/: __init__.py  fk.py  m2m.py  o2o.py
test/tests/: __init__.py  fk.py  m2m.py  nesc.py  o2o.py
