[metadata]
name = serializer-service
version = 0.1
description = Создание объектов
long_description = file:README.rst
author = cifra-k
license = BSD-3-Clause  # Example license

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
;install_requires =
;    Django >= X.Y  # Replace "X.Y" as appropriate