[metadata]
name = nescs
version = 0.3.3
description = Библиотека создания моделей вложенных сериализаторов
long_description = file:README.rst
author = cifra-k
license = MIT
url='https://github.com/twoics/nesc',

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django >= 4.1.9
    djangorestframework >= 3.13.1